# test-results

./: .coverage  .env.example  .flake8  .gitignore  .isort.cfg  .pylintrc  ADR.md  LICENSE  Makefile  README.md  coverage.xml  dashboard_analysis_notes.md  data_chart_improvement_plan.md  docker-compose.yml  go.sum  junit.xml  mypy.ini  package-lock.json  package.json  postman_test_data.txt  project-brief-prompt.md  pyproject.toml  pytest.ini  sass_fix_summary.md  sass_migration_plan.md  summary.md  tasks.py
.clinerules/: 01-coding-standards-example.md  02-cline-git-operations-rule.md  initializememorybank.md
.github/workflows/: ci-api.yml  ci-cli.yml  ci-frontend.yml  ci-scripts.yml
api/: .dockerignore  .golangci.yml  Dockerfile  Makefile  README.md  Taskfile.yml  go.mod  go.sum
api/cmd/: junit-report.xml
api/docs/: doc.go  docs.go  hexagonal-architecture-plain.md  hexagonal-architecture.md  project-migration-guide.md  swagger.json  swagger.yaml
cli/: README.md  Taskfile.yml  go.mod  main.go
cli/cmd/: junit.go  post.go  root.go
clinerules-bank/: 03-hexagonal-architecture-rule.md  04-hexagonal-architecture-rule.md
db/: add_auth_tables.sql  add_build_duration_column.sql  add_test_case_count_migration.sql  add_user_and_config_tables.sql  schema.sql  seed.py
docs/: 0001-user-dashboard-order.md  ADR.md  PYTHON.md  auth-development.md  dynamic_chart_data.md  feature-branch.md
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
memory-bank/: activeContext.md  auth-troubleshooting.md  dashboard_implementation_plan.md  data_chart_improvement_plan.md  data_chart_investigation_plan.md  investigation_plan.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md  temp_dashboard_compat_issues.md
scripts/: activate-rules.sh  cli.py  setup-auth-dev.sh  setup-project.sh
(+283 files in other folders)
