[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "test_results"
authors = [{name = "Benny Eisner", email = "benny.eisner@weather.com"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/BennyEisner/test-results"
