[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "scripts"
version = "0.1.0"
description = "Helper scripts for the test-results project"
authors = [
    { name = "Omar Crosby", email = "omar@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click",
    "requests",
    "lxml",
    "beautifulsoup4",
    "psycopg[binary]",  # v3 driver for PostgreSQL
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "invoke",
    "pytest",
    "coverage",
    "mypy",
    "flake8",
    "black",
    "isort"
]

[project.scripts]
benny = "scripts.cli:cli"
